--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </div>
         <div class="number">
           <div>
-            <img class="contact-icon"src="/icons/phone.png" alt="Phone">
+            <img class="contact-icon"src="icons/phone.png" alt="Phone">
           </div>
           <div>+91 9576517227</div>
            
